Completed Contacts Page and Fixed sizing and alignment

--- a/my-react-app/src/Components/ContactPageInfo/ContactPageInfo.css
+++ b/my-react-app/src/Components/ContactPageInfo/ContactPageInfo.css
@@ -1,5 +1,5 @@
 .contactPageContainer{
-    max-width: 800px;
+    max-width: 55rem;
     margin: 2rem auto;
     padding: 1.5rem 2rem;
     background-color: rgb(6, 5, 1);
@@ -14,11 +14,42 @@
     color: white;
 }
 .contactPageHeader{
-    background-color: #e0e0e0;
     display: flex;
     justify-content: center;
 }
 
 .contactPageGridContainer{
-    background-color: red;
+    display: flex;
+    justify-content: center;
+}
+
+.contactPageInfoGrid {
+  list-style: none;
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+  justify-content: center;   
+  align-items: center;       
+  gap: 5rem;         
+}
+
+.contactPageInfoGrid li{
+    list-style: none;
+    border: 2px solid, rgba(255, 255, 255, 0.25);
+    border-radius: 2%;
+    padding: 1vw;
+}
+
+.contactPageInfoGrid a{
+
+}
+
+.contactPageInfoGrid img{
+    width: 7rem;
+    height: 7rem;
+}
+
+.contactPageInfoGrid span{
+    display: flex;
+    justify-content: center;
 }
